@@ -32,7 +32,7 @@ DriveListWidgetItem::DriveListWidgetItem(QListWidget *parent, int type): QObject
 	}
 
 	// Getting corelib class pointer
-	CoreLibClassPointer = (CoreLibPrototype *) libq4wine.resolve("createCoreLib");
+	CoreLibClassPointer = reinterpret_cast<CoreLibPrototype*>(libq4wine.resolve("createCoreLib"));
     CoreLib.reset(static_cast<corelib *>(CoreLibClassPointer(true)));
 	return;
 }
