@@ -33,7 +33,7 @@ PrefixTreeWidget::PrefixTreeWidget(QWidget *parent) :
       }
 
       // Getting corelib class pointer
-      CoreLibClassPointer = (CoreLibPrototype *) libq4wine.resolve("createCoreLib");
+      CoreLibClassPointer = reinterpret_cast<CoreLibPrototype*>(libq4wine.resolve("createCoreLib"));
       CoreLib.reset(static_cast<corelib *>(CoreLibClassPointer(true)));
 
       //this->setHeaderLabel(tr("Current prefixes list"));
